[gd_scene load_steps=19 format=3 uid="uid://bi8ug64f6lcxd"]

[ext_resource type="FontFile" uid="uid://cvmfvcptp21rg" path="res://fonts/prstartk.ttf" id="1_4tbc3"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_778rn"]
[ext_resource type="Texture2D" uid="uid://cuc5fo0bhibw8" path="res://sprites/Witch Hut [16x16] Free Assets/Witch Tiles.png" id="2_vnf1t"]
[ext_resource type="PackedScene" uid="uid://cjgae12m4lg7c" path="res://scenes/cat.tscn" id="3_r0u8u"]
[ext_resource type="Texture2D" uid="uid://c3leumjw8rshf" path="res://sprites/light.png" id="4_8fn5c"]
[ext_resource type="AudioStream" uid="uid://dxd2ut2ll8gqu" path="res://sounds/blipSelect.wav" id="4_djcqt"]
[ext_resource type="Texture2D" uid="uid://b1xqyjrktvm1r" path="res://sprites/UI/Music.png" id="5_5qic4"]
[ext_resource type="AudioStream" uid="uid://2fv0gi350hry" path="res://sounds/NightAmbience.mp3" id="7_cmfrb"]
[ext_resource type="AudioStream" uid="uid://ba5e0pg0nt35q" path="res://sounds/meow1.mp3" id="9_3ttcc"]
[ext_resource type="AudioStream" uid="uid://cixerayno2uve" path="res://sounds/cat.wav" id="10_axdyf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cuif1"]
texture = ExtResource("2_vnf1t")
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
1:7/0 = 0
2:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
9:7/0 = 0
10:7/0 = 0
12:7/0 = 0
14:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
1:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
18:12/0 = 0
19:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0

[sub_resource type="TileSet" id="TileSet_v6m1q"]
sources/0 = SubResource("TileSetAtlasSource_cuif1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eu3o6"]
size = Vector2(10.6667, 13.3333)

[sub_resource type="Animation" id="Animation_sjfg1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AlbumButton:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(400, 224)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D:zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LampLight:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("cat/Area2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wl08c"]
resource_name = "flickering_light"
length = 2.0
loop_mode = 2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LampLight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 1, 1.1, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1.0, 0.9, 1.2, 0.8, 1.0, 1.2, 1.0]
}

[sub_resource type="Animation" id="Animation_dgr00"]
resource_name = "opening_animation"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartButton:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.9, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AlbumButton:self_modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(400, 224), Vector2(240, 136)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D:zoom")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimationPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["flickering_light", -1, 1.0, false],
"method": &"play"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("cat/Area2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8qpha"]
_data = {
"RESET": SubResource("Animation_sjfg1"),
"flickering_light": SubResource("Animation_wl08c"),
"opening_animation": SubResource("Animation_dgr00")
}

[sub_resource type="Environment" id="Environment_53bd6"]
background_mode = 3
background_energy_multiplier = 1.39
glow_enabled = true
glow_levels/1 = 1.3
glow_levels/3 = 2.71
glow_levels/5 = 4.22
glow_blend_mode = 0
glow_hdr_threshold = 1.5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_778rn")
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_v6m1q")
format = 2
layer_0/name = "background"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(1048576, 262144, 11, 1048577, 65536, 11, 1048578, 65536, 11, 1048579, 65536, 11, 1048580, 196608, 11, 1048581, 131072, 11, 1048582, 131072, 11, 1048583, 131072, 11, 1048584, 65536, 11, 1048585, 65536, 11, 1048586, 65536, 11, 1048587, 196608, 11, 1048588, 65536, 11, 1048589, 196608, 11, 1048590, 65536, 11, 1048591, 65536, 11, 1048592, 131072, 11, 1048593, 196608, 11, 1048594, 65536, 11, 1048595, 65536, 11, 1048596, 65536, 11, 1048597, 65536, 11, 1048598, 131072, 11, 1048599, 131072, 11, 1048600, 65536, 11, 1048601, 65536, 11, 1048602, 65536, 11, 1048603, 196608, 11, 1048604, 131072, 11, 1048605, 196608, 11, 0, 1179648, 6, 1, 1179648, 6, 2, 1179648, 6, 3, 1179648, 6, 4, 1179648, 6, 5, 1179648, 2, 6, 1179648, 6, 7, 1179648, 6, 8, 1179648, 6, 9, 1179648, 6, 10, 1179648, 6, 11, 1179648, 6, 12, 1179648, 2, 13, 1179648, 6, 14, 1179648, 6, 15, 1179648, 6, 16, 1179648, 6, 17, 1179648, 6, 18, 1179648, 6, 19, 1179648, 6, 20, 1179648, 6, 21, 1179648, 6, 22, 1179648, 6, 23, 1179648, 6, 24, 1179648, 6, 25, 1179648, 6, 26, 1179648, 6, 27, 1179648, 6, 28, 1179648, 6, 29, 1179648, 6, 983069, 1179648, 2, 983068, 1179648, 6, 983067, 1179648, 6, 983066, 1179648, 6, 983065, 1179648, 6, 983064, 1179648, 6, 983063, 1179648, 6, 983062, 1179648, 6, 983061, 1179648, 6, 983060, 1179648, 6, 983059, 1179648, 6, 983058, 1179648, 6, 917521, 1179648, 6, 917520, 1179648, 6, 917519, 1179648, 2, 917518, 1179648, 6, 917517, 1179648, 6, 917516, 1179648, 6, 917515, 1179648, 6, 917514, 1179648, 6, 917513, 1179648, 2, 917512, 1179648, 6, 983047, 1179648, 6, 983046, 1179648, 6, 983045, 1179648, 6, 983044, 1179648, 6, 983043, 1179648, 6, 983042, 1179648, 6, 983041, 1179648, 6, 983040, 1179648, 6, 917504, 1179648, 6, 65549, 1179648, 4, 65548, 1179648, 4, 65547, 1179648, 4, 65546, 1179648, 4, 65545, 1179648, 4, 65544, 1179648, 4, 65543, 1179648, 4, 65542, 1179648, 4, 65541, 1179648, 4, 65540, 1179648, 4, 65539, 1179648, 4, 65538, 1179648, 6, 65537, 1179648, 6, 65536, 1179648, 6, 851968, 1179648, 6, 786432, 1179648, 6, 720896, 1179648, 6, 655360, 1179648, 6, 589824, 1179648, 6, 524288, 1179648, 6, 458752, 1179648, 6, 393216, 1179648, 6, 327680, 1179648, 6, 262144, 1179648, 6, 196608, 1179648, 6, 131072, 1179648, 6, 131073, 1179648, 6, 196609, 1179648, 6, 262145, 1179648, 6, 327681, 1179648, 6, 393217, 1179648, 2, 458753, 1179648, 6, 524289, 1179648, 6, 589825, 1179648, 6, 655361, 1179648, 2, 720897, 1179648, 2, 786433, 1179648, 6, 851969, 1179648, 6, 917505, 1179648, 6, 917506, 1179648, 6, 851970, 1179648, 6, 786434, 1179648, 6, 720898, 1179648, 2, 655362, 1179648, 4, 589826, 1179648, 6, 524290, 1179648, 6, 458754, 1179648, 6, 393218, 1179648, 6, 327682, 1179648, 4, 262146, 1179648, 6, 196610, 1179648, 6, 131074, 1179648, 6, 131075, 1179648, 4, 196611, 1179648, 2, 262147, 1179648, 4, 327683, 1179648, 4, 393219, 1179648, 4, 458755, 1179648, 6, 524291, 1179648, 6, 589827, 1179648, 4, 655363, 1179648, 4, 720899, 1179648, 6, 786435, 1179648, 6, 851971, 1179648, 6, 917507, 1179648, 6, 917508, 1179648, 6, 851972, 1179648, 6, 786436, 1179648, 6, 720900, 1179648, 6, 655364, 1179648, 4, 589828, 1179648, 4, 589829, 1179648, 4, 655365, 1179648, 4, 720901, 1179648, 6, 786437, 1179648, 6, 851973, 1179648, 6, 917509, 1179648, 6, 917510, 1179648, 6, 851974, 1179648, 6, 786438, 1179648, 6, 720902, 1179648, 6, 655366, 1179648, 4, 589830, 1179648, 4, 589831, 1179648, 6, 655367, 1179648, 4, 720903, 1179648, 4, 786439, 1179648, 6, 851975, 1179648, 6, 917511, 1179648, 6, 851976, 1179648, 6, 786440, 1179648, 6, 720904, 1179648, 4, 655368, 1179648, 2, 589832, 1179648, 6, 589833, 1179648, 6, 655369, 1179648, 6, 720905, 1179648, 6, 786441, 1179648, 6, 851977, 1179648, 6, 851978, 1179648, 6, 786442, 1179648, 6, 720906, 1179648, 6, 655370, 1179648, 6, 589834, 1179648, 6, 589835, 1179648, 6, 655371, 1179648, 6, 720907, 1179648, 6, 786443, 1179648, 4, 851979, 1179648, 6, 851980, 1179648, 6, 786444, 1179648, 4, 720908, 1179648, 6, 655372, 1179648, 6, 589836, 1179648, 6, 589837, 1179648, 6, 655373, 1179648, 6, 720909, 1179648, 6, 786445, 1179648, 4, 851981, 1179648, 6, 851982, 1179648, 6, 786446, 1179648, 4, 720910, 1179648, 4, 655374, 1179648, 6, 589838, 1179648, 4, 65550, 1179648, 4, 65551, 1310720, 6, 131087, 1179648, 6, 196623, 1179648, 4, 262159, 1179648, 4, 327695, 1179648, 6, 393231, 1179648, 2, 458767, 1179648, 4, 524303, 1179648, 4, 589839, 1179648, 4, 655375, 1179648, 5, 720911, 1179648, 4, 786447, 1179648, 4, 851983, 1179648, 6, 851984, 1179648, 6, 786448, 1179648, 4, 720912, 1179648, 4, 655376, 1179648, 6, 589840, 1179648, 4, 524304, 1179648, 4, 458768, 1179648, 6, 393232, 1179648, 4, 327696, 1179648, 6, 262160, 1179648, 4, 196624, 1179648, 4, 131088, 1310720, 6, 65552, 1179648, 4, 65553, 1179648, 4, 131089, 1179648, 6, 196625, 1179648, 4, 262161, 1179648, 6, 327697, 1179648, 6, 393233, 1179648, 6, 458769, 1179648, 4, 524305, 1179648, 4, 589841, 1179648, 6, 655377, 1179648, 6, 720913, 1179648, 6, 786449, 1179648, 4, 851985, 1179648, 6, 851986, 1179648, 6, 786450, 1179648, 4, 720914, 1179648, 6, 655378, 1179648, 5, 589842, 1179648, 6, 524306, 1179648, 2, 458770, 1179648, 6, 393234, 1179648, 6, 327698, 1179648, 6, 262162, 1179648, 6, 196626, 1179648, 4, 131090, 1179648, 6, 65554, 1179648, 4, 65555, 1179648, 4, 131091, 1179648, 6, 196627, 1179648, 4, 262163, 1179648, 6, 327699, 1179648, 2, 393235, 1179648, 6, 458771, 1179648, 4, 524307, 1179648, 4, 589843, 1179648, 6, 655379, 1179648, 6, 720915, 1179648, 4, 786451, 1179648, 6, 851987, 1179648, 6, 917523, 1179648, 6, 917522, 1179648, 6, 917524, 1179648, 6, 851988, 1179648, 6, 786452, 1179648, 6, 720916, 1179648, 4, 655380, 1179648, 6, 589844, 1179648, 6, 524308, 1179648, 4, 458772, 1179648, 4, 393236, 1179648, 6, 327700, 1179648, 6, 262164, 1179648, 6, 196628, 1179648, 4, 131092, 1179648, 6, 65556, 1179648, 4, 65557, 1179648, 4, 131093, 1179648, 6, 196629, 1179648, 2, 262165, 1179648, 6, 327701, 1179648, 6, 393237, 1179648, 6, 458773, 1179648, 4, 524309, 1179648, 4, 589845, 1179648, 2, 655381, 1179648, 4, 720917, 1179648, 4, 786453, 1179648, 6, 851989, 1179648, 6, 917525, 1179648, 6, 917526, 1179648, 6, 851990, 1179648, 6, 786454, 1179648, 6, 720918, 1179648, 5, 655382, 1179648, 4, 589846, 1179648, 4, 524310, 1179648, 4, 458774, 1179648, 4, 393238, 1179648, 6, 327702, 1179648, 6, 262166, 1179648, 6, 196630, 1179648, 4, 131094, 1179648, 6, 65558, 1179648, 4, 65559, 1179648, 4, 131095, 1179648, 6, 196631, 1179648, 4, 262167, 1179648, 5, 327703, 1179648, 6, 393239, 1179648, 4, 458775, 1179648, 6, 524311, 1179648, 4, 589847, 1179648, 4, 655383, 1179648, 4, 720919, 1179648, 4, 786455, 1179648, 6, 851991, 1179648, 6, 917527, 1179648, 6, 917528, 1179648, 6, 851992, 1179648, 6, 786456, 1179648, 6, 720920, 1179648, 4, 655384, 1179648, 4, 589848, 1179648, 4, 524312, 1179648, 4, 458776, 1179648, 4, 393240, 1179648, 4, 327704, 1179648, 4, 262168, 1179648, 4, 196632, 1179648, 4, 131096, 1179648, 6, 65560, 1179648, 4, 65561, 1179648, 4, 131097, 1179648, 4, 196633, 1179648, 4, 262169, 1179648, 6, 327705, 1179648, 4, 393241, 1179648, 4, 458777, 1179648, 6, 524313, 1179648, 6, 589849, 1179648, 6, 655385, 1179648, 4, 720921, 1179648, 4, 786457, 1179648, 2, 851993, 1179648, 6, 917529, 1179648, 6, 917530, 1179648, 6, 851994, 1179648, 6, 786458, 1179648, 6, 720922, 1179648, 4, 655386, 1179648, 4, 589850, 1179648, 6, 524314, 1179648, 6, 458778, 1179648, 6, 393242, 1179648, 4, 327706, 1179648, 4, 262170, 1179648, 6, 196634, 1179648, 6, 131098, 1179648, 4, 65562, 1179648, 4, 65563, 1179648, 4, 131099, 1179648, 4, 196635, 1179648, 6, 262171, 1179648, 6, 327707, 1179648, 4, 393243, 1179648, 4, 458779, 1179648, 4, 524315, 1179648, 4, 589851, 1179648, 4, 655387, 1179648, 4, 720923, 1179648, 4, 786459, 1179648, 2, 851995, 1179648, 6, 917531, 1179648, 6, 917532, 1179648, 6, 851996, 1179648, 6, 786460, 1179648, 6, 720924, 1179648, 4, 655388, 1179648, 6, 589852, 1179648, 6, 524316, 1179648, 2, 458780, 1179648, 6, 393244, 1179648, 6, 327708, 1310720, 6, 262172, 1179648, 6, 196636, 1179648, 2, 131100, 1179648, 2, 65564, 1179648, 6, 65565, 1179648, 6, 131101, 1179648, 6, 196637, 1179648, 6, 262173, 1179648, 6, 327709, 1179648, 6, 393245, 1179648, 6, 458781, 1179648, 6, 524317, 1179648, 6, 589853, 1179648, 6, 655389, 1179648, 6, 720925, 1179648, 6, 786461, 1179648, 6, 851997, 1179648, 6, 917533, 1179648, 6, 983052, 1179648, 6, 983051, 1179648, 6, 983050, 1179648, 6, 983049, 1179648, 6, 983048, 1179648, 6, 983053, 1179648, 6, 983054, 1179648, 6, 983055, 1179648, 6, 983056, 1179648, 6, 983057, 1179648, 6, 131076, 1179648, 4, 196612, 1179648, 6, 262148, 1179648, 4, 327684, 1179648, 4, 393220, 1179648, 4, 458756, 1179648, 6, 524292, 1179648, 2, 131077, 1179648, 6, 196613, 1179648, 6, 262149, 1179648, 6, 327685, 1179648, 6, 393221, 1179648, 4, 458757, 1179648, 4, 524293, 1179648, 4, 131078, 1179648, 6, 196614, 1179648, 6, 262150, 1179648, 2, 327686, 1179648, 6, 393222, 1179648, 4, 458758, 1179648, 4, 524294, 1179648, 4, 131079, 1179648, 6, 196615, 1179648, 6, 262151, 1179648, 6, 327687, 1179648, 6, 393223, 1179648, 4, 458759, 1179648, 6, 524295, 1179648, 6, 131080, 1179648, 5, 196616, 1179648, 6, 262152, 1179648, 4, 327688, 1179648, 6, 393224, 1179648, 6, 458760, 1179648, 6, 524296, 1179648, 6, 131081, 1179648, 6, 196617, 1179648, 6, 262153, 1179648, 4, 327689, 1179648, 2, 393225, 1179648, 6, 458761, 1179648, 6, 524297, 1310720, 6, 131082, 1179648, 6, 196618, 1179648, 6, 262154, 1179648, 4, 327690, 1179648, 4, 393226, 1179648, 6, 458762, 1179648, 6, 524298, 1179648, 6, 131083, 1179648, 2, 196619, 1179648, 6, 262155, 1179648, 4, 327691, 1179648, 4, 393227, 1179648, 6, 458763, 1179648, 6, 524299, 1179648, 6, 131084, 1179648, 6, 196620, 1179648, 6, 262156, 1179648, 4, 327692, 1179648, 6, 393228, 1179648, 4, 458764, 1179648, 6, 524300, 1179648, 6, 131085, 1179648, 6, 196621, 1179648, 6, 262157, 1179648, 4, 327693, 1179648, 6, 393229, 1179648, 4, 458765, 1179648, 6, 524301, 1179648, 4, 131086, 1179648, 6, 196622, 1179648, 6, 262158, 1179648, 4, 327694, 1179648, 6, 393230, 1179648, 2, 458766, 1179648, 4, 524302, 1179648, 5)

[node name="StartButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 152.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("1_4tbc3")
theme_override_font_sizes/font_size = 16
text = "START"

[node name="AlbumButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 64.0
offset_top = 128.0
offset_right = 152.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("1_4tbc3")
theme_override_font_sizes/font_size = 16
text = "ALBUM"

[node name="LampLight" type="PointLight2D" parent="."]
position = Vector2(397, 176)
scale = Vector2(2.0625, 2.0625)
color = Color(1, 0.498039, 0, 1)
shadow_enabled = true
texture = ExtResource("4_8fn5c")

[node name="cat" parent="." instance=ExtResource("3_r0u8u")]
position = Vector2(400, 208)
scale = Vector2(3, 3)
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="cat"]
position = Vector2(0, 10.6667)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="cat/Area2D"]
position = Vector2(-3.05176e-05, -1.33333)
shape = SubResource("RectangleShape2D_eu3o6")
disabled = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="cat"]
position = Vector2(0, 16)
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 68.57
initial_velocity_max = 131.43
scale_amount_min = 0.0
scale_amount_max = 12.83
color = Color(0.541176, 0.313726, 1, 1)
hue_variation_min = 1.0
hue_variation_max = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8qpha")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 224)
zoom = Vector2(3, 3)

[node name="SelectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_djcqt")
volume_db = -16.0

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_cmfrb")
volume_db = -4.0

[node name="MusicCheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -46.0
offset_right = 64.0
offset_bottom = -6.0
grow_vertical = 0
button_pressed = true
icon = ExtResource("5_5qic4")

[node name="Lamp" type="Sprite2D" parent="."]
position = Vector2(424, 184)
scale = Vector2(3, 3)
texture = ExtResource("2_vnf1t")
flip_h = true
region_enabled = true
region_rect = Rect2(19, 112, 29, 48)

[node name="Pumpkin" type="Sprite2D" parent="."]
position = Vector2(88, 246)
scale = Vector2(2, 2)
texture = ExtResource("2_vnf1t")
region_enabled = true
region_rect = Rect2(50, 85, 11, 11)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 448.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_4tbc3")
theme_override_font_sizes/font_size = 32
text = "Long Tomorrow"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_53bd6")

[node name="Position1" type="Marker2D" parent="."]
position = Vector2(400, 208)

[node name="Position2" type="Marker2D" parent="."]
position = Vector2(128, 208)

[node name="Position3" type="Marker2D" parent="."]
position = Vector2(416, 80)

[node name="CatSFX1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3ttcc")
volume_db = -3.0

[node name="CatSFX2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_axdyf")
volume_db = -3.0

[connection signal="mouse_entered" from="StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="AlbumButton" to="." method="_on_album_button_mouse_entered"]
[connection signal="pressed" from="AlbumButton" to="." method="_on_album_button_pressed"]
[connection signal="mouse_entered" from="cat/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="toggled" from="MusicCheckBox" to="." method="_on_music_check_box_toggled"]
